--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -150,9 +150,11 @@
     "themeLight": "Light",
     "themeAuto": "Follow System",
     "fontSize": "Font Size",
+    "fontSizeSmall": "Small",
+    "fontSizeMedium": "Medium",
+    "fontSizeLarge": "Large",
     "fontFamily": "Font Family",
     "fontFamilyPlaceholder": "System Font",
-    "compactMode": "Compact Mode",
     "enableStreaming": "Enable Streaming Response",
     "apiTimeout": "API Timeout (ms)",
     "maxRetries": "Max Retries",
@@ -172,6 +174,8 @@
     "background": "Story Background",
     "backgroundPlaceholder": "Describe the background and world of the story...",
     "backgroundRequired": "Please fill in the story background first",
+    "supplement": "Additional Settings (Optional)",
+    "supplementPlaceholder": "Additional notes, special rules, important points, etc...",
     "characters": "Characters",
     "addCharacter": "+ Add Character",
     "characterNamePlaceholder": "Character Name",
@@ -193,7 +197,12 @@
     "generateCharacter": "AI Generate Character",
     "generatingCharacter": "Generating...",
     "generateCharacterFailed": "Failed to generate character: {error}",
-    "mainCharacter": "Main"
+    "characterGenerationHintsPlaceholder": "Character generation requirements (optional, e.g., a brave knight, a mysterious wizard, etc.)",
+    "mainCharacter": "Main",
+    "allowAutoGenerateCharacters": "Allow AI to auto-generate characters",
+    "allowAutoGenerateCharactersTooltip": "Allow AI to automatically add new characters when generating stories",
+    "allowAutoGenerateMainCharacters": "Allow AI to auto-generate main characters",
+    "allowAutoGenerateMainCharactersTooltip": "Allow AI to automatically add main characters when generating stories (requires 'Allow AI to auto-generate characters' to be enabled)"
   },
   "summaryPrompt": {
     "title": "Story Summary",
