--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -148,9 +148,11 @@
     "themeLight": "浅色",
     "themeAuto": "跟随系统",
     "fontSize": "字体大小",
+    "fontSizeSmall": "小",
+    "fontSizeMedium": "中",
+    "fontSizeLarge": "大",
     "fontFamily": "字体",
     "fontFamilyPlaceholder": "系统字体",
-    "compactMode": "紧凑模式",
     "enableStreaming": "启用流式响应",
     "apiTimeout": "API 超时 (毫秒)",
     "maxRetries": "最大重试次数",
@@ -170,6 +172,8 @@
     "background": "故事背景",
     "backgroundPlaceholder": "描述故事发生的背景、世界观等...",
     "backgroundRequired": "请先填写故事背景",
+    "supplement": "补充设定（可选）",
+    "supplementPlaceholder": "补充说明、特殊规则、注意事项等...",
     "characters": "人物",
     "addCharacter": "+ 添加人物",
     "characterNamePlaceholder": "人物名称",
@@ -191,7 +195,12 @@
     "generateCharacter": "AI生成人物",
     "generatingCharacter": "生成中...",
     "generateCharacterFailed": "生成人物失败: {error}",
-    "mainCharacter": "主要"
+    "characterGenerationHintsPlaceholder": "人物生成要求（可选，例如：需要一个勇敢的骑士、一个神秘的魔法师等）",
+    "mainCharacter": "主要",
+    "allowAutoGenerateCharacters": "允许AI自动生成角色",
+    "allowAutoGenerateCharactersTooltip": "允许AI在生成故事时自动添加新角色",
+    "allowAutoGenerateMainCharacters": "允许AI自动生成主要角色",
+    "allowAutoGenerateMainCharactersTooltip": "允许AI在生成故事时自动添加主要角色（需要同时开启\"允许AI自动生成角色\"）"
   },
   "summaryPrompt": {
     "title": "故事总结",
