--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -167,7 +167,8 @@
     "logLevelWarn": "Warn",
     "logLevelInfo": "Info",
     "logLevelDebug": "Debug",
-    "enableDiagnostics": "Enable Diagnostics"
+    "enableDiagnostics": "Enable Diagnostics",
+    "fieldRequired": "This field is required"
   },
   "conversationSettingsForm": {
     "title": "Story Settings",
